--- a/index.html
+++ b/index.html
@@ -66,6 +66,263 @@
             </div>
         </div>
     </section>
+    <section id="about">
+        <p class="section__text__p1">
+            Get to Know More
+        </p>
+        <h1 class="title">
+            About Me
+        </h1>
+        <div class="section-container">
+            <div class="section__pic-container">
+                <img src="./Assets/about-pic.png" 
+                alt="Profile Picture" class="about-pic">
+            </div>
+            <div class="about-details-container">
+                <div class="about-container">
+                    <div class="details-container">
+                        <img src="./Assets/experience.png" 
+                        alt="experience icon" class="icon">
+                        <h3>Experience</h3>
+                        <p class="section__text__p1">Projects in<br>Software Development & AI</p>
+                    </div>
+                    <div class="details-container">
+                        <img src="./Assets/education.png" 
+                        alt="education icon" class="icon">
+                        <h3>Education</h3>
+                        <p class="section__text__p1">B.Sc. Data Science<br>B. Business Administration</p>
+                    </div>
+                </div>
+                <div class="text-container">
+                    <p>
+                        I am a Data Scientist and AI Engineer with a background in Business Administration. I have experience in the development of machine learning models, data analysis, and data visualization. I am passionate about the application of data science to solve business problems and create value. I am always looking for new challenges and opportunities to learn and grow.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <img src="./Assets/arrow.png" 
+        alt="Arrow icon"  class="icon arrow" 
+        onclick="location.href='./#experience'">
+    </section>
+    <section id="experience">
+        <p class="section__text__p1">
+            Explore My
+        </p>
+        <h1 class="title">
+            Experience
+        </h1>
+        <div class="experience-details-container">
+            <div class="about-container">
+                <div class="details-container">
+                    <h2 class="experience-sub-title">Data Science</h2>
+                    <div class="article-container">
+                        <article>
+                            <img src="./Assets/checkmark.png" 
+                            alt="experience icon" class="icon">
+                            <div>
+                                <h3>Python</h3>
+                                <p>Experienced</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./Assets/checkmark.png" 
+                            alt="experience icon" class="icon">
+                            <div>
+                                <h3>R</h3>
+                                <p>Experienced</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./Assets/checkmark.png" 
+                            alt="experience icon" class="icon">
+                            <div>
+                                <h3>SQL</h3>
+                                <p>Experienced</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./Assets/checkmark.png" 
+                            alt="experience icon" class="icon">
+                            <div>
+                                <h3>Excel</h3>
+                                <p>Intermediate</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./Assets/checkmark.png" 
+                            alt="experience icon" class="icon">
+                            <div>
+                                <h3>PowerBI</h3>
+                                <p>Intermediate</p>
+                            </div>
+                        </article>
+                    </div>
+                </div>
+                <div class="details-container">
+                    <h2 class="experience-sub-title">AI Engineering</h2>
+                    <div class="article-container">
+                        <article>
+                            <img src="./Assets/checkmark.png" 
+                            alt="experience icon" class="icon">
+                            <div>
+                                <h3>Jupyter</h3>
+                                <p>Experienced</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./Assets/checkmark.png" 
+                            alt="experience icon" class="icon">
+                            <div>
+                                <h3>PyTorch</h3>
+                                <p>Experienced</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./Assets/checkmark.png" 
+                            alt="experience icon" class="icon">
+                            <div>
+                                <h3>SkLearn</h3>
+                                <p>Experienced</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./Assets/checkmark.png" 
+                            alt="experience icon" class="icon">
+                            <div>
+                                <h3>TensorFlow</h3>
+                                <p>Experienced</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./Assets/checkmark.png" 
+                            alt="experience icon" class="icon">
+                            <div>
+                                <h3>HuggingFace</h3>
+                                <p>Intermediate</p>
+                            </div>
+                        </article>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="experience-details-container">
+            <div class="about-container">
+                <div class="details-container">
+                    <h2 class="experience-sub-title">Software Development</h2>
+                    <div class="article-container">
+                        <article>
+                            <img src="./Assets/checkmark.png" 
+                            alt="experience icon" class="icon">
+                            <div>
+                                <h3>Git</h3>
+                                <p>Intermediate</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./Assets/checkmark.png" 
+                            alt="experience icon" class="icon">
+                            <div>
+                                <h3>HTML & CSS</h3>
+                                <p>Intermediate</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./Assets/checkmark.png" 
+                            alt="experience icon" class="icon">
+                            <div>
+                                <h3>MATLAB</h3>
+                                <p>Intermediate</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./Assets/checkmark.png" 
+                            alt="experience icon" class="icon">
+                            <div>
+                                <h3>TypeScript</h3>
+                                <p>Basic</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./Assets/checkmark.png" 
+                            alt="experience icon" class="icon">
+                            <div>
+                                <h3>JavaScript</h3>
+                                <p>Basic</p>
+                            </div>
+                        </article>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <img src="./Assets/arrow.png" 
+        alt="Arrow icon"  class="icon arrow" 
+        onclick="location.href='./#projects'">
+    </section>
+    <section id="projects">
+        <p class="section__text__p1">
+            Recent
+        </p>
+        <h1 class="title">
+            Projects
+        </h1>
+        <div class="experience-details-container">
+            <div class="about-container">
+                <div class="details-container color-container">
+                    <div class="article-container">
+                        <img src="./Assets/Story_Twist.jpg"
+                        alt="Project 1" class="project-img">
+                    </div>
+                    <h2 class="project-title">
+                        Story Twist
+                    </h2>
+                    <h3 class="project-subtitle">
+                        Backend Dev. | Pricing Model
+                    </h3>
+                    <p class="section__text__p1 project-description">
+                        A storytelling app for personalized & interactive tales.
+                    </p>
+                    <div class="button-container">
+                        <button class="btn btn-color-2 project-btn"
+                        onclick="location.href='https://github.com/fabianVagnoni/StoryAppTypeScript'">
+                            Repo
+                        </button>
+                        <button class="btn btn-color-1 project-btn"
+                        onclick="location.href='https://apps.apple.com/es/app/storytwist/id6689522572'">
+                            AppStore
+                        </button>
+                    </div>
+                </div>
+                <div class="details-container color-container">
+                    <div class="article-container">
+                        <img src="./Assets/optfolio.png"
+                        alt="Project 1" class="project-img">
+                    </div>
+                    <h2 class="project-title">
+                        Optfolio
+                    </h2>
+                    <h3 class="project-subtitle">
+                        Full Stack Development
+                    </h3>
+                    <p class="section__text__p1 project-description">
+                        An asset management platform for financial preditions.
+                    </p>
+                    <div class="button-container">
+                        <button class="btn btn-color-2 project-btn"
+                        onclick="location.href='https://github.com/fabianVagnoni/FinancialApp.py'">
+                            Repo
+                        </button>
+                        <button class="btn btn-color-1 project-btn"
+                        onclick="location.href='https://github.com'">
+                            AppStore
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <img src="./Assets/arrow.png" 
+        alt="Arrow icon"  class="icon arrow" 
+        onclick="location.href='./#projects'">
+    </section>
     <script src="scripts.js"></script>
 </body>
 </html>
