--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             alt="Fabián Vagnoni profile texture" class="circular-img">
         </div>
         <div class="section__text">
-            <p class="section__text_p1">
+            <p class="section__text__p1">
                 Hello I am
             </p>
             <h1 class="title">
@@ -138,6 +138,14 @@
                             <div>
                                 <h3>SQL</h3>
                                 <p>Experienced</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./Assets/checkmark.png" 
+                            alt="experience icon" class="icon">
+                            <div>
+                                <h3>Spark</h3>
+                                <p>Intermediate</p>
                             </div>
                         </article>
                         <article>
@@ -321,8 +329,50 @@
         </div>
         <img src="./Assets/arrow.png" 
         alt="Arrow icon"  class="icon arrow" 
-        onclick="location.href='./#projects'">
+        onclick="location.href='./#contact'">
     </section>
+    <section id="contact">
+        <p class="section__text__p1">
+            Get in Touch
+        </p>
+        <h1 class="title">
+            Contact
+        </h1>
+        <div class="contact-info-upper-container">
+            <div class="contact-info-container">
+                <img src="./Assets/email.png" 
+                alt="Email icon" class="icon contact-icon email-icon">
+                <p><a href="mailto:fvagnoni.ieu2021@student.ie.edu">
+                    fvagnoni.ieu2021@student.ie.edu
+                </a></p>
+            </div>
+            <div class="contact-info-container">
+                <img src="./Assets/linkedin.png" 
+                alt="LinkedIn icon" class="icon contact-icon">
+                <p> <a href="https://www.linkedin.com/in/fabian-vagnoni-1b1077224/">
+                    LinkedIn
+                </a></p>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <nav>
+            <div class="nav-links-container">
+                <ul class="nav-links">
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#experience">Experience</a></li>
+                    <li><a href="#projects">Project</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </div>
+        </nav>
+        <p>
+            Copyrighth &#169 2025 Fabián Vagnoni. All rights reserved.
+        </p>
+    </footer>
     <script src="scripts.js"></script>
+    <script>
+        (function(){if(!window.chatbase||window.chatbase("getState")!=="initialized"){window.chatbase=(...arguments)=>{if(!window.chatbase.q){window.chatbase.q=[]}window.chatbase.q.push(arguments)};window.chatbase=new Proxy(window.chatbase,{get(target,prop){if(prop==="q"){return target.q}return(...args)=>target(prop,...args)}})}const onLoad=function(){const script=document.createElement("script");script.src="https://www.chatbase.co/embed.min.js";script.id="K4HXDYaYX4LC3WXLHm8Ml";script.domain="www.chatbase.co";document.body.appendChild(script)};if(document.readyState==="complete"){onLoad()}else{window.addEventListener("load",onLoad)}})();
+    </script>
 </body>
 </html>
