--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         </h1>
         <div class="section-container">
             <div class="section__pic-container">
-                <img src="./Assets/about-pic.png" 
+                <img src="./Assets/about_pic.jpg" 
                 alt="Profile Picture" class="about-pic">
             </div>
             <div class="about-details-container">
@@ -305,6 +305,10 @@
                         <img src="./Assets/optfolio.png"
                         alt="Project 1" class="project-img">
                     </div>
+                    <div class="article-container">
+                        <img src="./Assets/optfolio_logo.png"
+                        alt="Project 1" class="project-img opt-img-2">
+                    </div>
                     <h2 class="project-title">
                         Optfolio
                     </h2>
@@ -318,10 +322,6 @@
                         <button class="btn btn-color-2 project-btn"
                         onclick="location.href='https://github.com/fabianVagnoni/FinancialApp.py'">
                             Repo
-                        </button>
-                        <button class="btn btn-color-1 project-btn"
-                        onclick="location.href='https://github.com'">
-                            AppStore
                         </button>
                     </div>
                 </div>
