--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
                     </div>
                 </div>
                 <div class="text-container">
-                    <p>
-                        I am a Data Scientist and AI Engineer with a background in Business Administration. I have experience in the development of machine learning models, data analysis, and data visualization. I am passionate about the application of data science to solve business problems and create value. I am always looking for new challenges and opportunities to learn and grow.
+                    <p class="section__about__text">
+                        I am a Data Scientist and AI Engineer with a background in Business Administration. My experience resolves around the development of machine learning, data analycts and visualization for customer-driven solutions. Creating value for people is my greatest passion, as well as Deep Learning. I am always enthusiastic about acquiring new skills and learning new facts. Beyond my professional life, a good novel is always welcomed.
                     </p>
                 </div>
             </div>
