Changed to pawworl

--- a/index.html
+++ b/index.html
@@ -302,26 +302,28 @@
                 </div>
                 <div class="details-container color-container">
                     <div class="article-container">
-                        <img src="./Assets/optfolio.png"
-                        alt="Project 1" class="project-img">
-                    </div>
-                    <div class="article-container">
-                        <img src="./Assets/optfolio_logo.png"
-                        alt="Project 1" class="project-img opt-img-2">
+                        <video class="project-video" controls>
+                            <source src="./Assets/parrowl_recording_2.mp4" type="video/mp4">
+                            Your browser does not support the video tag.
+                        </video>
+                        <video class="project-video" controls>
+                            <source src="./Assets/parrowl_recording.mp4" type="video/mp4">
+                            Your browser does not support the video tag.
+                        </video>
                     </div>
                     <h2 class="project-title">
-                        Optfolio
+                        Parrowl
                     </h2>
                     <h3 class="project-subtitle">
                         Full Stack Development
                     </h3>
                     <p class="section__text__p1 project-description">
-                        An asset management platform for financial preditions.
+                        AI Agent for language learning.
                     </p>
                     <div class="button-container">
                         <button class="btn btn-color-2 project-btn"
-                        onclick="location.href='https://github.com/fabianVagnoni/FinancialApp.py'">
-                            Repo
+                        onclick="location.href='https://parrowl.netlify.app'">
+                            Website
                         </button>
                     </div>
                 </div>
