Added Skills to Soft.Dev.

--- a/index.html
+++ b/index.html
@@ -258,6 +258,30 @@
                                 <p>Basic</p>
                             </div>
                         </article>
+                        <article>
+                            <img src="./Assets/checkmark.png" 
+                            alt="experience icon" class="icon">
+                            <div>
+                                <h3>GitHub Actions</h3>
+                                <p>Basic</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./Assets/checkmark.png" 
+                            alt="experience icon" class="icon">
+                            <div>
+                                <h3>Azure</h3>
+                                <p>Intermediate</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./Assets/checkmark.png" 
+                            alt="experience icon" class="icon">
+                            <div>
+                                <h3>Docker</h3>
+                                <p>Basic</p>
+                            </div>
+                        </article>
                     </div>
                 </div>
             </div>
