--- a/index.html
+++ b/index.html
@@ -297,73 +297,129 @@
         <h1 class="title">
             Projects
         </h1>
-        <div class="experience-details-container">
-            <div class="about-container">
-                <div class="details-container color-container">
-                    <div class="project-media-container">
-                        <div class="media-display">
-                            <img src="./Assets/Story_Twist.jpg"
-                            alt="Project 1" class="project-media active" data-media-type="image">
+        <div class="projects-carousel-container">
+            <button class="carousel-btn carousel-btn-prev" onclick="moveCarousel(-1)">
+                <span>&lt;</span>
+            </button>
+            <div class="projects-carousel">
+                <div class="project-slide">
+                    <div class="details-container color-container">
+                        <div class="project-media-container">
+                            <div class="media-display">
+                                <img src="./Assets/sepcan/sepcan1.jpg"
+                                alt="Project 1" class="project-media active" data-media-type="image">
+                                <video class="project-media" controls data-media-type="video" style="display: none;">
+                                    <source src="./Assets/sepcan/sepcan2.mp4" type="video/mp4">
+                                    Your browser does not support the video tag.
+                                </video>
+                                <img src="./Assets/sepcan/sepcan3.jpg"
+                                alt="Project 1 Image 2" class="project-media" data-media-type="image" style="display: none;">
+                                <img src="./Assets/sepcan/sepcan4.jpg"
+                                alt="Project 1 Image 3" class="project-media" data-media-type="image" style="display: none;">
+                            </div>
+                            <div class="media-menu">
+                                <button class="media-btn active" data-media-index="0">Image 1</button>
+                                <button class="media-btn" data-media-index="1">Video</button>
+                                <button class="media-btn" data-media-index="2">Image 2</button>
+                                <button class="media-btn" data-media-index="3">Image 3</button>
+                            </div>
                         </div>
-                    </div>
-                    <div class="project-content">
-                        <h2 class="project-title">
-                            Story Twist
-                        </h2>
-                        <h3 class="project-subtitle">
-                            Backend Dev. | Pricing Model
-                        </h3>
-                        <p class="section__text__p1 project-description">
-                            A storytelling app for personalized & interactive tales.
-                        </p>
-                        <div class="button-container">
-                            <button class="btn btn-color-2 project-btn"
-                            onclick="location.href='https://github.com/fabianVagnoni/StoryAppTypeScript'">
-                                Repo
-                            </button>
-                            <button class="btn btn-color-1 project-btn"
-                            onclick="location.href='https://apps.apple.com/es/app/storytwist/id6689522572'">
-                                AppStore
-                            </button>
+                        <div class="project-content">
+                            <h2 class="project-title">
+                                SEPCAN Fleet Management
+                            </h2>
+                            <h3 class="project-subtitle">
+                                Fill
+                            </h3>
+                            <p class="section__text__p1 project-description">
+                                Fill
+                            </p>
+                            <div class="button-container">
+                                <button class="btn btn-color-2 project-btn"
+                                onclick="location.href='#'">
+                                    Coming Soon
+                                </button>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="details-container color-container">
-                    <div class="project-media-container">
-                        <div class="media-display">
-                            <video class="project-media active" controls data-media-type="video">
-                                <source src="./Assets/parrowl_recording_2.mp4" type="video/mp4">
-                                Your browser does not support the video tag.
-                            </video>
-                            <video class="project-media" controls data-media-type="video" style="display: none;">
-                                <source src="./Assets/parrowl_recording.mp4" type="video/mp4">
-                                Your browser does not support the video tag.
-                            </video>
+                <div class="project-slide">
+                    <div class="details-container color-container">
+                        <div class="project-media-container">
+                            <div class="media-display">
+                                <img src="./Assets/Story_Twist.jpg"
+                                alt="Project 2" class="project-media active" data-media-type="image">
+                            </div>
                         </div>
-                        <div class="media-menu">
-                            <button class="media-btn active" data-media-index="0">Demo 1</button>
-                            <button class="media-btn" data-media-index="1">Demo 2</button>
+                        <div class="project-content">
+                            <h2 class="project-title">
+                                Story Twist
+                            </h2>
+                            <h3 class="project-subtitle">
+                                Backend Dev. | Pricing Model
+                            </h3>
+                            <p class="section__text__p1 project-description">
+                                A storytelling app for personalized & interactive tales.
+                            </p>
+                            <div class="button-container">
+                                <button class="btn btn-color-2 project-btn"
+                                onclick="location.href='https://github.com/fabianVagnoni/StoryAppTypeScript'">
+                                    Repo
+                                </button>
+                                <button class="btn btn-color-1 project-btn"
+                                onclick="location.href='https://apps.apple.com/es/app/storytwist/id6689522572'">
+                                    AppStore
+                                </button>
+                            </div>
                         </div>
                     </div>
-                    <div class="project-content">
-                        <h2 class="project-title">
-                            Parrowl
-                        </h2>
-                        <h3 class="project-subtitle">
-                            Full Stack Development
-                        </h3>
-                        <p class="section__text__p1 project-description">
-                            AI Agent for language learning.
-                        </p>
-                        <div class="button-container">
-                            <button class="btn btn-color-2 project-btn"
-                            onclick="location.href='https://parrowl.netlify.app'">
-                                Website
-                            </button>
+                </div>
+                <div class="project-slide">
+                    <div class="details-container color-container">
+                        <div class="project-media-container">
+                            <div class="media-display">
+                                <video class="project-media active" controls data-media-type="video">
+                                    <source src="./Assets/parrowl_recording_2.mp4" type="video/mp4">
+                                    Your browser does not support the video tag.
+                                </video>
+                                <video class="project-media" controls data-media-type="video" style="display: none;">
+                                    <source src="./Assets/parrowl_recording.mp4" type="video/mp4">
+                                    Your browser does not support the video tag.
+                                </video>
+                            </div>
+                            <div class="media-menu">
+                                <button class="media-btn active" data-media-index="0">Demo 1</button>
+                                <button class="media-btn" data-media-index="1">Demo 2</button>
+                            </div>
+                        </div>
+                        <div class="project-content">
+                            <h2 class="project-title">
+                                Parrowl
+                            </h2>
+                            <h3 class="project-subtitle">
+                                Full Stack Development
+                            </h3>
+                            <p class="section__text__p1 project-description">
+                                AI Agent for language learning.
+                            </p>
+                            <div class="button-container">
+                                <button class="btn btn-color-2 project-btn"
+                                onclick="location.href='https://parrowl.netlify.app'">
+                                    Website
+                                </button>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
+            <button class="carousel-btn carousel-btn-next" onclick="moveCarousel(1)">
+                <span>&gt;</span>
+            </button>
+        </div>
+        <div class="carousel-indicators">
+            <span class="indicator active" onclick="goToSlide(0)"></span>
+            <span class="indicator" onclick="goToSlide(1)"></span>
+            <span class="indicator" onclick="goToSlide(2)"></span>
         </div>
         <img src="./Assets/arrow.png" 
         alt="Arrow icon"  class="icon arrow" 
