--- a/index.html
+++ b/index.html
@@ -329,10 +329,10 @@
                                 SEPCAN Fleet Management
                             </h2>
                             <h3 class="project-subtitle">
-                                Fill
+                                Full Stack Data Engineer | Sole Developer
                             </h3>
                             <p class="section__text__p1 project-description">
-                                Fill
+                                Sole responsible for the development of a functional platform for the fleet management of the biggest port-services company in the Canary Islands.
                             </p>
                             <div class="button-container">
                                 <button class="btn btn-color-2 project-btn"
