About Me -> Deletion of Text & Image + ReStyling for the containers

--- a/index.html
+++ b/index.html
@@ -74,11 +74,11 @@
             About Me
         </h1>
         <div class="section-container">
-            <div class="section__pic-container">
+            <!-- <div class="section__pic-container">
                 <img src="./Assets/about_pic.jpg" 
                 alt="Profile Picture" class="about-pic">
             </div>
-            <div class="about-details-container">
+            <div class="about-details-container"> -->
                 <div class="about-container">
                     <div class="details-container">
                         <img src="./Assets/experience.png" 
@@ -93,11 +93,11 @@
                         <p class="section__text__p1">B.Sc. Data Science<br>B. Business Administration</p>
                     </div>
                 </div>
-                <div class="text-container">
+                <!-- <div class="text-container">
                     <p class="section__about__text">
                         I am a Data Scientist and AI Engineer with a background in Business Administration. My experience resolves around the development of machine learning, data analycts and visualization for customer-driven solutions. Creating value for people is my greatest passion, as well as Deep Learning. I am always enthusiastic about acquiring new skills and learning new facts. Beyond my professional life, a good novel is always welcomed.
                     </p>
-                </div>
+                </div> -->
             </div>
         </div>
         <img src="./Assets/arrow.png" 
