--- a/index.html
+++ b/index.html
@@ -80,13 +80,13 @@
             </div>
             <div class="about-details-container"> -->
                 <div class="about-container">
-                    <div class="details-container">
+                    <div class="about-details-container">
                         <img src="./Assets/experience.png" 
                         alt="experience icon" class="icon">
                         <h3>Experience</h3>
                         <p class="section__text__p1">Projects in<br>Software Development & AI</p>
                     </div>
-                    <div class="details-container">
+                    <div class="about-details-container">
                         <img src="./Assets/education.png" 
                         alt="education icon" class="icon">
                         <h3>Education</h3>
@@ -306,6 +306,41 @@
                     <div class="details-container color-container">
                         <div class="project-media-container">
                             <div class="media-display">
+                                <img src="./Assets/ScotusNet/Logo.png"
+                                alt="Project 1" class="project-media active" data-media-type="image">
+                                <img src="./Assets/ScotusNet/scotus-net.drawio.png"
+                                alt="Project 1 Image 2" class="project-media" data-media-type="image" style="display: none;">
+                                <img src="./Assets/ScotusNet/contrastive_justice.drawio.png"
+                                alt="Project 1 Image 3" class="project-media" data-media-type="image" style="display: none;">
+                            </div>
+                            <div class="media-menu">
+                                <button class="media-btn active" data-media-index="0">Logo</button>
+                                <button class="media-btn" data-media-index="1">Architecture</button>
+                                <button class="media-btn" data-media-index="2">Pretraining</button>
+                            </div>
+                        </div>
+                        <div class="project-content">
+                            <h2 class="project-title">
+                                SCOTUS-Net
+                            </h2>
+                            <h3 class="project-subtitle">
+                                Data Science & AI Engineering | Sole Developer
+                            </h3>
+                            <p class="section__text__p1 project-description">
+                                Research project on the use of a Zero-Shot LLM to predict a Supreme Court decision given a case description (Inspired by The Economist's SCOTUSbot).
+                            </p>
+                            <div class="button-container">
+                                <button class="btn btn-color-2 project-btn">
+                                    Coming Soon
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="project-slide">
+                    <div class="details-container color-container">
+                        <div class="project-media-container">
+                            <div class="media-display">
                                 <img src="./Assets/sepcan/sepcan1.jpg"
                                 alt="Project 1" class="project-media active" data-media-type="image">
                                 <video class="project-media" controls data-media-type="video" style="display: none;">
@@ -335,8 +370,7 @@
                                 Sole responsible for the development of a functional platform for the fleet management of the biggest port-services company in the Canary Islands.
                             </p>
                             <div class="button-container">
-                                <button class="btn btn-color-2 project-btn"
-                                onclick="location.href='#'">
+                                <button class="btn btn-color-2 project-btn">
                                     Coming Soon
                                 </button>
                             </div>
@@ -420,6 +454,7 @@
             <span class="indicator active" onclick="goToSlide(0)"></span>
             <span class="indicator" onclick="goToSlide(1)"></span>
             <span class="indicator" onclick="goToSlide(2)"></span>
+            <span class="indicator" onclick="goToSlide(3)"></span>
         </div>
         <img src="./Assets/arrow.png" 
         alt="Arrow icon"  class="icon arrow" 
