--- a/index.html
+++ b/index.html
@@ -330,8 +330,13 @@
                                 Research project on the use of a Zero-Shot LLM to predict a Supreme Court decision given a case description (Inspired by The Economist's SCOTUSbot).
                             </p>
                             <div class="button-container">
-                                <button class="btn btn-color-2 project-btn">
-                                    Coming Soon
+                                <button class="btn btn-color-2 project-btn"
+                                onclick="window.open('./Assets/ScotusNet/SCOTUS-Net.pdf')">
+                                    Report
+                                </button>
+                                <button class="btn btn-color-1 project-btn"
+                                onclick="location.href='https://github.com/fabianVagnoni/scotus_net'">
+                                    Repo
                                 </button>
                             </div>
                         </div>
