Adding stack specifications to projects

--- a/index.html
+++ b/index.html
@@ -324,11 +324,21 @@
                                 SCOTUS-Net
                             </h2>
                             <h3 class="project-subtitle">
-                                Data Science & AI Engineering | Sole Developer
+                                AI Researcher | Sole Developer
                             </h3>
                             <p class="section__text__p1 project-description">
                                 Research project on the use of a Zero-Shot LLM to predict a Supreme Court decision given a case description (Inspired by The Economist's SCOTUSbot).
                             </p>
+                            <div class="tech-stack">
+                                <span class="tech-tag">Python</span>
+                                <span class="tech-tag">PyTorch</span>
+                                <span class="tech-tag">Google Cloud</span>
+                                <span class="tech-tag">Docker</span>
+                                <span class="tech-tag">YAML</span>
+                                <span class="tech-tag">Shell</span>
+                                <span class="tech-tag">Hugging Face</span>
+                                <span class="tech-tag">Optuna</span>
+                            </div>
                             <div class="button-container">
                                 <button class="btn btn-color-2 project-btn"
                                 onclick="window.open('./Assets/ScotusNet/SCOTUS-Net.pdf')">
@@ -374,6 +384,13 @@
                             <p class="section__text__p1 project-description">
                                 Sole responsible for the development of a functional platform for the fleet management of the biggest port-services company in the Canary Islands.
                             </p>
+                            <div class="tech-stack">
+                                <span class="tech-tag">Azure Cloud</span>
+                                <span class="tech-tag">SQL</span>
+                                <span class="tech-tag">Python</span>
+                                <span class="tech-tag">React</span>
+                                <span class="tech-tag">TypeScript</span>
+                            </div>
                             <div class="button-container">
                                 <button class="btn btn-color-2 project-btn">
                                     Coming Soon
@@ -400,6 +417,11 @@
                             <p class="section__text__p1 project-description">
                                 A storytelling app for personalized & interactive tales.
                             </p>
+                            <div class="tech-stack">
+                                <span class="tech-tag">React</span>
+                                <span class="tech-tag">TypeScript</span>
+                                <span class="tech-tag">Machine Learning</span>
+                            </div>
                             <div class="button-container">
                                 <button class="btn btn-color-2 project-btn"
                                 onclick="location.href='https://github.com/fabianVagnoni/StoryAppTypeScript'">
@@ -441,6 +463,11 @@
                             <p class="section__text__p1 project-description">
                                 AI Agent for language learning.
                             </p>
+                            <div class="tech-stack">
+                                <span class="tech-tag">React</span>
+                                <span class="tech-tag">TypeScript</span>
+                                <span class="tech-tag">Machine Learning</span>
+                            </div>
                             <div class="button-container">
                                 <button class="btn btn-color-2 project-btn"
                                 onclick="location.href='https://parrowl.netlify.app'">
